fix extra space overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 }
 
 //MAIN STRUCTURE
-body {
+body,html {
     font-size: $font-size;
     overflow-x: hidden;
 }
